[package]
name = "rtltcp"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["daemon_systemd"]
daemon_systemd = ["listenfd", "systemd"]

[dependencies]
"rtlsdr_mt" = "*"
"slog" = { version = "*", features = ["max_level_debug", "release_max_level_debug"] }
"slog-async" = "*"
"slog-term" = "*"
"ctrlc" = "*"
"clap" = { version = "3.0", features = ["derive"] }
"listenfd" = { version = "*", optional = true }
"systemd" = { version = "*", "optional" = true }
