[package]
name = "rtltcp"
description = "A rust implementation of rtl-tcp with better buffering and support for systemd socket activation."
version = "0.1.1"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["daemon_systemd"]
daemon_systemd = ["listenfd", "systemd"]

[dependencies]
"rtlsdr_mt" = "2.1"
"tracing" = "0.1"
"tracing-subscriber" = "0.2"
"ctrlc" = "3.2"
"clap" = { version = "3.0", features = ["derive"] }
"listenfd" = { version = "0.5", optional = true }
"systemd" = { version = "0.10", "optional" = true }
